change color heading and footer and font size to be more readable. Fix first page images to have same width

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -12,17 +12,15 @@ header,
 footer {
   display: flex;
   justify-content: space-between;
-  background: linear-gradient(
-    135deg,
+  background: radial-gradient(
     #06060b 0%,
-    #10101e 40%,
-    #3a0f0f 70%,
-    #ff3c1f 100%
+    #10101e 60%,
+    #6a1e1e 100%,
+    #8c1414 100%
   );
   color: antiquewhite;
   flex: 1 1 auto;
   flex-wrap: wrap;
-
   min-width: 256px;
 }
 
@@ -41,17 +39,19 @@ header > div {
 
 header div h1 {
   font-size: 40px;
-  letter-spacing: 0.3rem;
+  letter-spacing: 0.5rem;
   font-weight: 600;
   margin-bottom: 5px;
+  font-family: "quintessential", cursive;
 }
 
 header div p {
   margin: 0px;
+  font-size: 22px;
 }
 
 #logo {
-  width: 200px;
+  height: 115px;
   border-radius: 50%;
   margin: 10px;
   padding-left: 25px;
@@ -59,28 +59,36 @@ header div p {
 
 header nav {
   align-content: end;
+  padding-right: 1rem;
+  margin-bottom: 20px;
 }
 
 header nav a {
-  gap: 20px;
-  margin: 5px;
+  margin: 10px;
+  padding: 10px;
   text-decoration: none;
   cursor: pointer;
   color: antiquewhite;
+  font-size: 20px;
+  font-weight: 550;
+  letter-spacing: 0.1rem;
 }
 
 header nav a:hover {
   color: red;
+  font-size: 22px;
 }
 
 header nav a:active {
   color: rgb(157, 37, 37);
+  text-decoration: underline;
 }
 
 /* Section for main information with a sidebar photo */
 
 main {
-  margin: 10px;
+  max-width: 90%;
+  margin: auto;
   display: grid;
   grid-template-columns: 2.5fr 1.5fr;
   grid-template-areas:
@@ -110,13 +118,7 @@ main section {
 
 #Get-started-btn {
   padding: 1rem 2rem;
-  background: linear-gradient(
-    135deg,
-    #06060b 0%,
-    #10101e 40%,
-    #3a0f0f 70%,
-    #ff3c1f 100%
-  );
+  background: radial-gradient(#06060b 0%, #10101e 10%, #8c1414 100%);
   color: antiquewhite;
   border: none;
   cursor: pointer;
@@ -132,23 +134,33 @@ main section {
 #section2 ul {
   display: flex;
   justify-content: space-between;
+  align-items: stretch;
   gap: 10px;
 }
 
 #section2 li {
+  display: flex;
+  flex: 1;
   font-size: 20px;
   font-weight: 700;
   margin-bottom: 10px;
   text-decoration: none;
   list-style: none;
-  display: flex;
   flex-direction: column;
   align-items: center;
+  max-height: 500px;
+  max-width: 100%;
+}
+
+#section2 li h3 {
+  min-height: 72px;
 }
 
 #section2 li img {
-  max-width: 100%;
-  height: 534px;
+  width: 100%;
+  height: 400px;
+  align-items: center;
+  object-fit: cover;
   margin-bottom: 10px;
   margin-top: 20px;
 }
@@ -197,5 +209,15 @@ footer {
   #section2 ul {
     flex-direction: column;
     align-items: center;
+  }
+  #section2 li img {
+    width: 400px;
+    height: 400px;
+    align-items: center;
+    object-fit: cover;
+    margin-bottom: 10px;
+  }
+  #section2 li h3 {
+    min-height: 36px;
   }
 }
